FISH-6259 --illegal-access=debug